--- a/.config.cfg.example
+++ b/.config.cfg.example
@@ -12,14 +12,24 @@ STATS=/path/to/stas/directory
 STATSSCENES=${STATS}scenes/
 DOSANOMALIES=/path/to/anomalies/directory/
 DOSSORT="name of sort folder"
+DOSSORTGEN=/path/to/import/gen/directory/
+NBMIN="3"
 RECAP=name and path of recap file
 DELIM1="-0" #delim for Regroup_Files
 DELIM2="_x" #delim for Regroup_Files
 DELIM3='_chf' #delim for Regroup_Files
 DELIM4="_prob" #delim for Regroup_Files
 DELIM5="_new" #delim for Regroup_Files
+DELIMATRIERGEN="_x_"
+CARACTMIN="4"
 DIRSAV_STATS=/path/to/sav stats/directory/
 BACKUP_STATS="$(date +"%Y-%m-%d_%H-%M-%S")_stats-backup"
+SMB_SHARE="//192.168.50.104/tvai_ok"
+USERNAME=""
+PASSWORD=""
+DOSSIER_MOUNT=""
+DOSSIER_ATRIER=""
+OUTFILES=${STATS}/out.csv
 RED='\033[0;31m' #code couleur pour les mauvaises réponses
 GREEN='\033[0;32m' #code couleur pour les bonnes réponses
 NC='\033[0m' # No Color 
